# hello_cursorcalculator

./: .gitignore  README.md  pyproject.toml
src/my_cursor/: __init__.py  usage.py
src/your_package_name/: calculator.py  usage.py
tests/: test_calculator.py  test_example.py
